--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.css' rel='stylesheet' />
     <style>
         body { margin:0; padding:0; }
-        #map { position:absolute; top:0; bottom:0; width:100%; }
+        #map { position:absolute; top:0; bottom:0; width: 100% }
     </style>
 </head>
 <body>
 
-<div id='map'></div>
-    <script src="data.js"></script>
-    <script src="webgl_map.js"></script>
+    <div id='map'></div>
+
+
+
+ 
     <script src="mapbox.js"></script>
 </body>
 </html>
