--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>WebGL Wind Map</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.js'></script>
+    <script src='js/functions.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.css' rel='stylesheet' />
     <style>
         body { margin:0; padding:0; }
@@ -57,6 +58,6 @@
 
 
 
-    <script src="mapbox.js"></script>
+    <script src="js/mapbox.js"></script>
 </body>
 </html>
