--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
             <input onchange="setParticleSize()" id="particlesize" type="range" min="1.0" max="4.0" value="2" class="slider">
             <p> Particle Update Frequency</p>
             <input onchange="setDropFreq()" id="dropfreq" type="range" min="1" max="1000" value="5" class="slider">
+            <br>
+        
+            <p>This map is made using Mapbox GL JS library. The wind visualization is made in a WebGL-layer using data from SMHI Open Data API. 
             <br><br>
-            <p>Reload the page if the wind layer doesn't load properly <p>
+            <a href="https://github.com/PatrikSylve/WindMap">GitHub repository</a>
 
     <output></output>
         </div>
